post path changes

--- a/profile.html
+++ b/profile.html
@@ -262,7 +262,7 @@
       <div class="row footer-top">
         <div class="col-lg-3 col-md-6 mb-3">
           <div class="footer-left-sec">
-            <img class="img-fluid d-block m-auto mb-3" src="/homepageimages/vmart_store-logo.png" alt="" width="160px"
+            <img class="img-fluid d-block m-auto mb-3" src="homepageimages/vmart_store-logo.png" alt="" width="160px"
               height="200px">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit, sunt tenetur qui aperiam, quia
@@ -301,7 +301,7 @@
           <h6>SOME POSTS</h6>
           <div class="footer-post-sec">
             <div>
-              <a href=""><img class="img-fluid" src="/homepageimages/b5.jpg" alt="">
+              <a href=""><img class="img-fluid" src="homepageimages/b5.jpg" alt="">
               </a>
             </div>
             <div class="ms-2">
@@ -312,7 +312,7 @@
 
           <div class="footer-post-sec">
             <div>
-              <a href=""><img class="img-fluid" src="/homepageimages/b6.jpg" alt="">
+              <a href=""><img class="img-fluid" src="homepageimages/b6.jpg" alt="">
               </a>
             </div>
             <div class="ms-2">
