--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <header>
     <nav class="navbar navbar-expand-md fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html"><img class="img-fluid" src="homepageimages/vmart_store-logo.png" alt="" width="110px" height="200px"></a>
+        <a class="navbar-brand" href="index.html"><img class="img-fluid" src="homepageimages/vmart_store-logo.png" alt="" width="130px" height="200px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -63,7 +63,7 @@
                 Categeory
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="categories.html">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li>
                   <hr class="dropdown-divider">
@@ -77,7 +77,7 @@
                 Cart
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="cart.html">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li>
                   <hr class="dropdown-divider">
@@ -91,7 +91,7 @@
                 Coupan
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="my-coupan.html">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li>
                   <hr class="dropdown-divider">
@@ -1420,7 +1420,7 @@
     <div class="row footer-top">
       <div class="col-lg-3 col-md-6 mb-3">
         <div class="footer-left-sec">
-          <img class="img-fluid d-block m-auto mb-3" src="/homepageimages/vmart_store-logo.png" alt="" width="160px"
+          <img class="img-fluid d-block m-auto mb-3" src="homepageimages/vmart_store-logo.png" alt="" width="160px"
             height="200px">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit, sunt tenetur qui aperiam, quia
@@ -1459,7 +1459,7 @@
         <h6>SOME POSTS</h6>
         <div class="footer-post-sec">
           <div>
-            <a href=""><img class="img-fluid" src="/homepageimages/b5.jpg" alt="">
+            <a href=""><img class="img-fluid" src="homepageimages/b5.jpg" alt="">
             </a>
           </div>
           <div class="ms-2">
@@ -1470,7 +1470,7 @@
 
         <div class="footer-post-sec">
           <div>
-            <a href=""><img class="img-fluid" src="/homepageimages/b6.jpg" alt="">
+            <a href=""><img class="img-fluid" src="homepageimages/b6.jpg" alt="">
             </a>
           </div>
           <div class="ms-2">
