--- a/index.html
+++ b/index.html
@@ -710,21 +710,13 @@
     <section class="computer-section">
       <div class="container">
         <div class="computer-main-body-content">
-          <div class="row g-0 ">
-            <div class="col-lg-2 col-12">
-              <img class="img-fluid" src="homepageimages/mobileadd1.gif" alt="">
-            </div>
-            <div class="col-lg-8 col-8">
-              <img class="img-fluid" src="images/computer-offers add.jpg" alt="">
-            </div>
-            <div class="col-lg-2 col-4">
-              <img class="img-fluid" src="images/computerleft-add.jpg" alt="">
+          <div class="row">
+            <div class="col-lg-12 mb-3">
+              <img class="img-fluid h-100" src="homepageimages/computer-mid sec sale1.webp" alt="">
             </div>
           </div>
-          <div class="row">
-            <div class="col-lg-2">
-              <img class="img-fluid" src="homepageimages/mobileadd4.gif" alt="">
-            </div>
+          
+          <div class="row justify-content-center computer-bottom-product-body">
             <div class="col-lg-2 col-6">
               <div class="computer-main-card-body">
                 <a href="add-to-cart.html"><img src="images/computer-item1.jpg" class="card-img-top img-fluid"
@@ -962,8 +954,29 @@
                   </div>
                 </div>
               </div>
-              <div>
-                <img class="img-fluid" src="/homepageimages/cap1.jpg" alt="" width="100%">
+              <div class="card border-2 shadow mb-2">
+                <div class="row g-0 align-items-center">
+                  <div class="col-3 text-center">
+                    <a target="_blank" href="">
+                      <img src="homepageimages/bag1.jpg" class="img-fluid " alt="Fashion">
+                    </a>
+                  </div>
+                  <div class="col-8">
+                    <div class="card-body p-0 px-2">
+                      <h5 class="mb-1"> Fashion</h5>
+                      <h6 class="font-400 font-10">Men Shirt</h6>
+                      <div class="d-flex justify-content-between align-items-center flex-wrap rating-wrap">
+                        <div class="rating">
+                          <h6 class="home-leftside-wrapper-price"><span>&#8377;</span>25.15 <del
+                              class="discount"><span>&#8377;</span>30.15</del></h6>
+                        </div>
+                        <div>
+                          <a href="" class="home-leftside-wrapper-btn">Add to Cart</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -999,14 +1012,8 @@
       <div class="container">
         <div class="electronic-section-main-body-content">
           <div class="row">
-            <div class="col-lg-2">
-              <img class="img-fluid" src="homepageimages/offer2.jpg" alt="">
-            </div>
-            <div class="col-lg-8">
-              <img class="img-fluid" src="images/electronic-offers.jpg" alt="">
-            </div>
-            <div class="col-lg-2 ">
-              <img class="img-fluid" src="images/electronicadd1.jpg" alt="">
+            <div class="col-md-12">
+              <img class="img-fluid h-100" src="homepageimages/kitchen electronic-mid sec.webp" alt="">
             </div>
           </div>
           <div class="row">
