--- a/add-to-cart.html
+++ b/add-to-cart.html
@@ -327,7 +327,7 @@
             </div>
             <div>
               <span class="fw-bold">Guaranteed safe checkout: </span>
-              <img class="img-fluid  py-1 border border-1 px-2" src="/homepageimages/safe-checkout.jpg" alt="" width="300px">
+              <img class="img-fluid  py-1 border border-1 px-2" src="homepageimages/safe-checkout.jpg" alt="" width="300px">
             </div>
             
             <h6 class="fw-bold">Ship To</h6>
@@ -592,7 +592,7 @@
 
         <div class="footer-post-sec">
           <div>
-            <a href=""><img class="img-fluid" src="/homepageimages/b6.jpg" alt="">
+            <a href=""><img class="img-fluid" src="homepageimages/b6.jpg" alt="">
             </a>
           </div>
           <div class="ms-2">
