--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-md fixed-top">
+    <nav class="navbar navbar-expand-md ">
       <div class="container">
         <a class="navbar-brand" href="index.html"><img class="img-fluid" src="homepageimages/vmart_store-logo.png"
             alt="" width="130px" height="200px"></a>
@@ -153,83 +153,50 @@
 
 
   <main role="main">
-    <section class="header-top-carousel">
-      <div class="container-fluid p-0">
-        <swiper-container class="mySwiper" pagination="true">
-          <swiper-slide><a href=""><img src="homepageimages/jio mart-slidetop5.webp" alt=""></a></swiper-slide>
-          <swiper-slide><a href=""><img src="homepageimages/jio mart-slidetop3.webp" alt=""></a></swiper-slide>
-          <swiper-slide><a href=""><img src="homepageimages/jio mart-slidetop1.webp" alt=""></a></swiper-slide>
-          <swiper-slide><a href=""><img src="homepageimages/jio mart-slidetop4.webp" alt=""></a></swiper-slide>
-          <swiper-slide><a href=""><img src="homepageimages/jio mart-slidetop6.webp" alt=""></a></swiper-slide>
-          <swiper-slide><a href=""><img src="homepageimages/jio mart-slidetop2.webp" alt=""></a></swiper-slide>
-        </swiper-container>
-      </div>
-      <style>
-        .header-top-carousel {
-          padding: 69px 0px 10px;
-        }
-
-
-        swiper-slide {
-          align-items: center;
-        }
-
-        swiper-slide img {
-          display: block;
-          width: 100%;
-          height: auto;
-        }
-      </style>
-    </section>
-
-
-    
-
     <!-- banner-product-all-categories -->
 
-    <section class="banner-product-all-categories mb-2 animate__animated animate__backInLeft">
+    <section class="banner-product-all-categories mb-4 mt-5 animate__animated animate__backInLeft">
       <div class="container">
-        <div class="banner-product-all-categories-main-body mt-2">
-
+        <div class="banner-product-all-categories-main-body mt-2 shadow rounded">
           <div class="row text-center">
             <div class="col-lg-2 col-md-4 col-6">
               <div class="categories-brand ">
-                <a href=""><img class="img-fluid mb-2" src="homepageimages/mobile.png" alt=""></a>
+                <a href=""><img class="img-fluid mb-2" src="homepageimages/mobile.png" alt="" width="60"></a>
                 <h6>Mobile & Tablets</h6>
               </div>
             </div>
 
             <div class="col-lg-2 col-md-4 col-6">
               <div class="categories-brand">
-                <a href=""><img class="img-fluid mb-2 " src="homepageimages/electronic.png" alt=""></a>
+                <a href=""><img class="img-fluid mb-2 " src="homepageimages/electronic.png" alt=""width="60"></a>
                 <h6>Electronics</h6>
               </div>
             </div>
 
             <div class="col-lg-2 col-md-4 col-6">
               <div class="categories-brand">
-                <a href=""><img class="img-fluid mb-2 " src="homepageimages/fashion.png" alt=""></a>
+                <a href=""><img class="img-fluid mb-2 " src="homepageimages/fashion.png" alt=""width="60"></a>
                 <h6>Fashion</h6>
               </div>
             </div>
 
             <div class="col-lg-2 col-md-4 col-6">
               <div class="categories-brand">
-                <a href=""><img class="img-fluid mb-2" src="homepageimages/toy.png" alt=""></a>
+                <a href=""><img class="img-fluid mb-2" src="homepageimages/toy.png" alt=""width="60"></a>
                 <h6>Travel</h6>
               </div>
             </div>
 
             <div class="col-lg-2 col-md-4 col-6">
               <div class="categories-brand">
-                <a href=""><img class="img-fluid mb-2" src="homepageimages/appliance.png" alt=""></a>
+                <a href=""><img class="img-fluid mb-2" src="homepageimages/appliance.png" alt=""width="60"></a>
                 <h6>Home & Kitchen</h6>
               </div>
             </div>
 
             <div class="col-lg-2 col-md-4 col-6">
               <div class="categories-brand">
-                <a href=""><img class="img-fluid mb-2" src="homepageimages/grocery.png" alt=""></a>
+                <a href=""><img class="img-fluid mb-2" src="homepageimages/grocery.png" alt=""width="60"></a>
                 <h6>Grocery</h6>
               </div>
             </div>
@@ -1665,36 +1632,24 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-lg-2 col-md-6 col-sm-4 col-6 mb-3">
-            <a href=""><img class="img-fluid" src="homepageimages/brand1.jpg" alt="">
+            <a href=""><img class="img-fluid" src="homepageimages/brand1.jpg" alt="" width="140px">
             </a>
           </div>
           <div class="col-lg-2 col-md-6 col-sm-4 col-6 mb-3">
-            <a href=""><img class="img-fluid" src="homepageimages/brand2.jpg" alt="">
+            <a href=""><img class="img-fluid" src="homepageimages/brand2.jpg" alt=""width="140px">
             </a>
           </div>
           <div class="col-lg-2 col-md-6 col-sm-4 col-6 mb-3">
-            <a href=""><img class="img-fluid" src="homepageimages/brand3.jpg" alt=""></a>
+            <a href=""><img class="img-fluid" src="homepageimages/brand3.jpg" alt=""width="140px"></a>
           </div>
           <div class="col-lg-2 col-md-6 col-sm-4 col-6 mb-3">
-            <a href=""><img class="img-fluid" src="homepageimages/brand4.jpg" alt=""></a>
+            <a href=""><img class="img-fluid" src="homepageimages/brand4.jpg" alt=""width="140px"></a>
           </div>
           <div class="col-lg-2 col-md-6 col-sm-4 col-6 mb-3">
-            <a href=""><img class="img-fluid" src="homepageimages/brand5.jpg" alt=""></a>
+            <a href=""><img class="img-fluid" src="homepageimages/brand5.jpg" alt=""width="140px"></a>
           </div>
           <div class="col-lg-2 col-md-6 col-sm-4 col-6 mb-3 ">
-            <a href=""><img class="img-fluid" src="homepageimages/brand6.jpg" alt=""></a>
-          </div>
-          <div class="col-lg-2  col-md-6 col-sm-4 col-6 mb-3">
-            <a href=""><img class="img-fluid" src="homepageimages/brand1.jpg" alt=""></a>
-          </div>
-          <div class="col-lg-2 col-md-6 col-sm-4 col-6 mb-3">
-            <a href=""><img class="img-fluid" src="homepageimages/brand1.jpg" alt=""></a>
-          </div>
-          <div class="col-lg-2 col-md-6 col-sm-4 col-6 mb-3">
-            <a href=""><img class="img-fluid" src="homepageimages/brand6.jpg" alt=""></a>
-          </div>
-          <div class="col-lg-2 col-md-6 col-sm-4 col-6 mb-3">
-            <a href=""><img class="img-fluid" src="homepageimages/brand4.jpg" alt=""></a>
+            <a href=""><img class="img-fluid" src="homepageimages/brand6.jpg" alt=""width="140px"></a>
           </div>
         </div>
       </div>
@@ -1708,15 +1663,15 @@
   <footer class="footer-section">
     <div class="container">
       <div class="row footer-top">
-        <div class="col-lg-3 col-md-6 mb-3">
+        <div class="col-lg-3 col-md-6 mb-4">
           <div class="footer-left-sec">
             <img class="img-fluid d-block m-auto mb-3" src="homepageimages/vmart_store-logo.png" alt="" width="160px"
               height="200px">
-            <p>
+            <p class="text-center">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit, sunt tenetur qui aperiam, quia
               laboriosam ducimus praesentium nisi.
             </p>
-            <div class="left-socials-icons">
+            <div class="left-socials-icons text-center">
               <a href=""><i class="fa-brands fa-facebook-f"></i></a>
               <a href=""><i class="fa-brands fa-twitter"></i></a>
               <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
@@ -1729,19 +1684,45 @@
           <h6>QUECK LINKS</h6>
           <div class="row">
             <div class="col-lg-6 col-5 footer-column-links">
-              <a href="">HOME</a>
-              <a href="">ABOUT US</a>
-              <a href="">PRODUCTS</a>
-              <a href="">BLOGS</a>
-              <a href="">GALLERY</a>
-              <a href="">CONTACT</a>
+              <ul class="nav flex-column">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">ABOUT US</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">PRODUCTS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">BLOGS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">GALLERY</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">CONTACT</a>
+                </li>
+              </ul>
             </div>
             <div class="col-lg-6 col-6 footer-column-links">
-              <a href="">LOGIN</a>
-              <a href="">REGISTRATION</a>
-              <a href="">SERVICES</a>
-              <a href="">PAGES</a>
-              <a href="">OUR STORES</a>
+              <ul class="nav flex-column">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">LOGIN</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">REGISTRATION</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">SERVICES</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">PAGES</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">OUR STORES</a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -1784,14 +1765,15 @@
             <a href=""> BRANDS</a>
             <a href="">CASES</a>
             <a href=""> CABLES</a>
+            <a href=""> CABLES</a>
           </div>
 
-          <div class="footer-contact-details-body">
+          <div class="footer-contact-details-body pt-2 ">
             <ul class="footer-social-nav d-flex">
-              <li><a href="" class="btn btn-youtube"><span><i class="fa-brands fa-youtube mx-1"></i></span>YouTube</a>
+              <li><a href="" class="btn btn-youtube text-white"><span><i class="fa-brands fa-youtube mx-1"></i></span>YouTube</a>
               </li>
               <li>
-                <a href="" class="btn btn-telegram"><span><i class="fa-brands fa-telegram mx-1"></i></span>Telegram</a>
+                <a href="" class="btn btn-telegram text-white"><span><i class="fa-brands fa-telegram mx-1"></i></span>Telegram</a>
               </li>
             </ul>
           </div>
@@ -1808,7 +1790,7 @@
           </div>
           <div class="col-lg-4 mb-2 col-md-6 col-12">
             <div class="footer-social-icons">
-              <a href="" class=" text-decoration-none">Privacy Policy</a> <span class="text-dark">|</span>
+              <a href="" class=" text-decoration-none">Privacy Policy</a> <span class="text-white">|</span>
               <a href="" class=" text-decoration-none">Terms And Condition</a>
 
             </div>
